--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,8 +6,6 @@ on:
       - prod
     paths:
       - 'k8s/prod/*.yaml'
-      - 'k8s/stg/*.yaml'
-
 jobs:
   run-script:
     runs-on: ubuntu-latest
@@ -16,19 +14,26 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Debug - List Changed Files
+      run: git diff --name-only HEAD^ HEAD
+
     - name: Check for YAML changes
       id: yaml-check
       run: |
+        echo "Checking for YAML changes..."
         if git diff --name-only HEAD^ HEAD | grep -qE 'k8s/(prod|stg)/.*\.yaml'; then
           echo "YAML files changed"
-          echo "::set-output name=changes::true"
+          echo "changes=true" >> $GITHUB_ENV
         else
           echo "No YAML changes"
-          echo "::set-output name=changes::false"
+          echo "changes=false" >> $GITHUB_ENV
         fi
 
+    - name: Debug - Show Environment Variables
+      run: echo "Changes: ${{ env.changes }}"
+
     - name: Run Shell Script
-      if: steps.yaml-check.outputs.changes == 'true'
+      if: env.changes == 'true'
       run: |
         chmod +x ./k8s/run-script.sh
         ./k8s/run-script.sh
