--- a/.github/workflows/image-update-trigger.yml
+++ b/.github/workflows/image-update-trigger.yml
@@ -3,8 +3,8 @@ name: Image Update Detection
 on:
   push:
     branches:
-      - main 
-      - prod # main branch'te çalışacak şekilde değiştirildi
+      - main
+      - prod
     paths:
       - '**/*.yaml'
       - '**/*.yaml'
@@ -21,27 +21,49 @@ jobs:
       - name: Check for image changes
         id: check-changes
         run: |
-          CHANGED_FILES=$(git diff --name-only HEAD^ HEAD | grep -E 'k8s/(prod|stg)/.+\.yaml$' || true)
+          echo "Starting image change detection..."
           
+          # Değişen dosyaları bul
+          CHANGED_FILES=$(git diff --name-only HEAD^ HEAD | grep -E 'k8s/(prod|stg)/.+\.yaml$' || true)
+          echo "Changed YAML files:"
+          echo "$CHANGED_FILES"
+          
+          # Her dosya için detaylı kontrol
           IMAGE_CHANGED=false
           for file in $CHANGED_FILES; do
-            if git diff HEAD^ HEAD "$file" | grep -q '^[+-].*image:'; then
+            echo "Checking file: $file"
+            
+            # Dosyanın diff'ini göster
+            echo "Diff for $file:"
+            git diff HEAD^ HEAD "$file"
+            
+            # Image değişikliklerini daha geniş bir pattern ile ara
+            if git diff HEAD^ HEAD "$file" | grep -E '^\+.*[[:space:]]image:[[:space:]]*' > /dev/null; then
+              echo "✅ Image change detected in $file"
               IMAGE_CHANGED=true
-              echo "Image change detected in $file"
               echo "changed_file=$file" >> $GITHUB_OUTPUT
+            else
+              echo "❌ No image change in $file"
             fi
           done
           
+          echo "Final result - Image changed: $IMAGE_CHANGED"
           echo "has_image_changes=$IMAGE_CHANGED" >> $GITHUB_OUTPUT
-          
-          # Debug bilgisi
-          echo "Debug Information:"
-          echo "Changed files: $CHANGED_FILES"
-          echo "Image changed: $IMAGE_CHANGED"
 
       - name: Run trigger script
         if: steps.check-changes.outputs.has_image_changes == 'true'
         run: |
-          echo "Running trigger.sh script..."
+          echo "Image changes detected, running trigger.sh..."
           chmod +x ./trigger.sh
           ./trigger.sh
+
+      - name: Debug information
+        run: |
+          echo "Debug Output:"
+          echo "has_image_changes: ${{ steps.check-changes.outputs.has_image_changes }}"
+          echo "Current directory contents:"
+          ls -la
+          echo "Git status:"
+          git status
+          echo "Last commit:"
+          git log -1
