--- a/.github/workflows/image-update-trigger.yml
+++ b/.github/workflows/image-update-trigger.yml
@@ -1,4 +1,4 @@
-name: Run Script on Every Commit
+name: Image Update Detection
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - '**/*.yaml'
 
 jobs:
-  run-script-on-commit:
+  detect-image-changes:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -17,8 +17,58 @@ jobs:
         with:
           fetch-depth: 2
 
-      - name: Run trigger script
+      - name: Fetch all branches
         run: |
-          echo "Running trigger.sh due to commit..."
+          git fetch --all
+          
+      - name: Check for image changes
+        id: check-changes
+        run: |
+          echo "Starting image change detection..."
+          
+          # Mevcut branch'i al
+          CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
+          echo "Current branch: $CURRENT_BRANCH"
+          
+          # Her iki branch için değişiklikleri kontrol et
+          if [ "$CURRENT_BRANCH" = "main" ]; then
+            CHANGED_FILES=$(git diff --name-only HEAD^ HEAD | grep -E 'k8s/(prod|stg)/.+\.yaml$' || true)
+          elif [ "$CURRENT_BRANCH" = "prod" ]; then
+            CHANGED_FILES=$(git diff --name-only HEAD^ HEAD | grep -E 'k8s/(prod|stg)/.+\.yaml$' || true)
+          fi
+          
+          echo "Changed YAML files:"
+          echo "$CHANGED_FILES"
+          
+          IMAGE_CHANGED=false
+          for file in $CHANGED_FILES; do
+            echo "Checking file: $file"
+            echo "File diff:"
+            git diff HEAD^ HEAD "$file"
+            
+            # Image değişikliklerini kontrol et
+            if git diff HEAD^ HEAD "$file" | grep -E '^\+[[:space:]]*image:[[:space:]]*[^[:space:]]+' > /dev/null; then
+              echo "✅ Image change detected in $file"
+              IMAGE_CHANGED=true
+              echo "changed_file=$file" >> $GITHUB_OUTPUT
+            else
+              # Alternatif pattern ile tekrar kontrol et
+              if git diff HEAD^ HEAD "$file" | grep -E '^\+.*image:[[:space:]]*' > /dev/null; then
+                echo "✅ Image change detected (alternative pattern) in $file"
+                IMAGE_CHANGED=true
+                echo "changed_file=$file" >> $GITHUB_OUTPUT
+              else
+                echo "❌ No image change in $file"
+              fi
+            fi
+          done
+          
+          echo "Final result - Image changed: $IMAGE_CHANGED"
+          echo "has_image_changes=$IMAGE_CHANGED" >> $GITHUB_OUTPUT
+
+      - name: Run trigger script
+        if: steps.check-changes.outputs.has_image_changes == 'true'
+        run: |
+          echo "Image changes detected, running trigger.sh..."
           chmod +x ./trigger.sh
           ./trigger.sh
