--- a/.github/workflows/image-update-trigger.yml
+++ b/.github/workflows/image-update-trigger.yml
@@ -1,75 +1,52 @@
-name: Image Update Detection and Script Execution
+name: Detect Image Changes
 
 on:
   push:
     branches:
-      - main
       - prod
-    paths:
-      - '**/*.yaml'
+      - stg
+      - main
 
 jobs:
   detect-image-changes:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 2
 
-      - name: Fetch all branches
-        run: |
-          git fetch --all
-          
-      - name: Check for image changes
-        id: check-changes
+      - name: Set up Git
+        run: git fetch --all
+
+      - name: Detect image changes in YAML files
         run: |
           echo "Starting image change detection..."
 
-          # Mevcut branch'i al
+          # Get current branch
           CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
           echo "Current branch: $CURRENT_BRANCH"
 
-          # Değişen dosyaları bul
+          # Find changed files in k8s/prod or k8s/stg directories
           CHANGED_FILES=$(git diff --name-only HEAD^ HEAD | grep -E 'k8s/(prod|stg)/.+\.yaml$' || true)
           echo "Changed YAML files:"
           echo "$CHANGED_FILES"
 
           IMAGE_CHANGED=false
+
           for file in $CHANGED_FILES; do
             echo "Checking file: $file"
-            echo "File diff:"
-            git diff HEAD^ HEAD "$file"
-
-            # Image değişikliklerini kontrol et
-            if git diff HEAD^ HEAD "$file" | grep -E '^\+[[:space:]]*image:[[:space:]]*[^[:space:]]+' > /dev/null; then
-              echo "✅ Image change detected in $file"
+            # Check if there is an image line change
+            if git diff HEAD^ HEAD "$file" | grep -E '^\+.*image:'; then
+              echo "Image change detected in $file"
               IMAGE_CHANGED=true
-              echo "changed_file=$file" >> $GITHUB_OUTPUT
-            else
-              # Alternatif pattern ile tekrar kontrol et
-              if git diff HEAD^ HEAD "$file" | grep -E '^\+.*image:[[:space:]]*' > /dev/null; then
-                echo "✅ Image change detected (alternative pattern) in $file"
-                IMAGE_CHANGED=true
-                echo "changed_file=$file" >> $GITHUB_OUTPUT
-              else
-                echo "❌ No image change in $file"
-              fi
             fi
           done
 
-          echo "Final result - Image changed: $IMAGE_CHANGED"
-          echo "has_image_changes=$IMAGE_CHANGED" >> $GITHUB_OUTPUT
-
-      - name: Run trigger script if image changes detected
-        if: steps.check-changes.outputs.has_image_changes == 'true'
-        run: |
-          echo "Image changes detected, running trigger.sh..."
-          chmod +x ./trigger.sh
-          ./trigger.sh
-
-      - name: Run trigger script on every commit
-        run: |
-          echo "Running trigger.sh due to commit..."
-          chmod +x ./trigger.sh
-          ./trigger.sh
+          if [ "$IMAGE_CHANGED" = true ]; then
+            echo "Triggering the shell script due to image change."
+            ./your-shell-script.sh
+          else
+            echo "No image changes detected."
+          fi
